ATLAS-1115: fix scrollbar on tu and user-admin

--- a/frontend/src/app/core/components/route-to-dialog/route-to-dialog.component.scss
+++ b/frontend/src/app/core/components/route-to-dialog/route-to-dialog.component.scss
@@ -4,6 +4,10 @@
   overflow: auto;
   height: calc(100% - #{variables.$footerHeight});
   pointer-events: auto !important;
+
+  * {
+    overflow: unset;
+  }
 }
 
 .route-to-dialog-backdrop {
